@@ -571,6 +571,7 @@ void QDeclarativeWebView::setPressGrabTime(int millis)
     emit pressGrabTimeChanged();
 }
 
+#ifndef QT_NO_ACTION
 /*!
     \qmlproperty action WebView::back
     This property holds the action for causing the previous URL in the history to be displayed.
@@ -606,6 +607,7 @@ QAction* QDeclarativeWebView::stopAction() const
 {
     return page()->action(QWebPage::Stop);
 }
+#endif // QT_NO_ACTION
 
 /*!
     \qmlproperty real WebView::title
@@ -971,9 +973,9 @@ QString QDeclarativeWebPage::chooseFile(QWebFrame* originatingFrame, const QStri
 }
 
 /*!
-    \qmlsignal WebView::alert(message)
+    \qmlsignal WebView::onAlert(message)
 
-    This signal is emitted when the web engine sends a JavaScript alert. The \a message is the text
+    The handler is called when the web engine sends a JavaScript alert. The \a message is the text
     to be displayed in the alert to the user.
 */
 
