@@ -2,6 +2,16 @@
 
         Reviewed by Simon Hausmann.
 
+        Fix documentation issue on the onAlert handler.
+        Fix compilation issue with QT_NO_ACTION.
+
+        * declarative/qdeclarativewebview.cpp:
+        * declarative/qdeclarativewebview_p.h:
+
+2010-06-18  Alexis Menard  <alexis.menard@nokia.com>
+
+        Reviewed by Simon Hausmann.
+
         [Qt] Change the target path to QtWebKit.
 
         * declarative/declarative.pro:
